[project]
name = "msc-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Moe Naser",email = "moe.b.naser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
